syntax = "proto3";


option go_package = "github.com/kweheliye/omsv2/common";

package api;

message Order {
  string ID =1;
  string customerID =2;
  string Status =3;
  repeated  Item Items = 4;
  string PaymentLink = 5;
}


service  OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc UpdateOrder(Order) returns (Order);
}

message GetOrderRequest {
  string OrderID = 1;
  string CustomerID = 2;
}

message  Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID =4;
}

message  ItemWithQuantity {
  string ID =1;
  int32 Quantity =2;
}
message  CreateOrderRequest {
  string customerID = 1;
  repeated  ItemWithQuantity Items =2;
}
